<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/commType"
        android:layout_width="89dp"
        android:layout_height="25dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="68dp"
        android:text="@string/commType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeout"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="120dp"
        android:text="@string/timeout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/serialPort"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="180dp"
        android:text="@string/serialport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/baudRate"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="228dp"
        android:text="@string/boudrate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/destIP"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="264dp"
        android:text="@string/destIP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/destPort"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="308dp"
        android:text="@string/destport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/macAddr"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="352dp"
        android:text="@string/macaddr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_CommType"
        android:layout_width="144dp"
        android:layout_height="22dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="68dp"
        android:entries="@array/data"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_SerialPort"
        android:layout_width="141dp"
        android:layout_height="38dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="168dp"
        android:inputType="text"
        android:text="@string/defaultSerialPort"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_BaudRate"
        android:layout_width="141dp"
        android:layout_height="38dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="212dp"
        android:inputType="text"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_DestPort"
        android:layout_width="141dp"
        android:layout_height="38dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="296dp"
        android:inputType="text"
        android:text="@string/defaultPort"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_Timeout"
        android:layout_width="141dp"
        android:layout_height="38dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="108dp"
        android:inputType="text"
        android:text="@string/defaultTimeout"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_DestIP"
        android:layout_width="141dp"
        android:layout_height="38dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="252dp"
        android:inputType="text"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_MacAddr"
        android:layout_width="141dp"
        android:layout_height="38dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="344dp"
        android:inputType="text"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="73dp"
        android:layout_height="40dp"
        android:layout_marginStart="274dp"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>